--- a/README_brexit_template.Rmd
+++ b/README_brexit_template.Rmd
@@ -12,17 +12,17 @@ output: html_document
 [![R](https://img.shields.io/badge/R-276DC3?style=flat&logo=r&logoColor=white)](https://www.r-project.org/)
 [![tidyverse](https://img.shields.io/badge/tidyverse-1.3.0-blue)](https://www.tidyverse.org/)
 
-## 📊 Project Overview
+## Project Overview
 
 This project analyzes voting behavior in the 2016 Brexit referendum, investigating the relationship between education levels and voting preferences. Using district-level data from England and survey data covering the entire UK, the analysis reveals strong statistical associations between educational attainment and referendum outcomes.
 
 **Key Finding:** Districts with higher percentages of university-educated residents showed significantly lower support for leaving the EU (correlation: -0.90, p < 0.001).
 
-## 🎯 Research Question
+## Research Question
 
 *How did education levels influence Brexit voting behavior, and what patterns emerge when analyzing district-level demographics?*
 
-## 📁 Project Structure
+## Project Structure
 
 ```
 brexit-voting-analysis/
@@ -36,7 +36,7 @@ brexit-voting-analysis/
     └── correlation_matrix.png
 ```
 
-## 🔍 Methodology
+## Methodology
 
 ### Data Sources
 - **Survey Data**: Individual-level voting intentions (n=30,895)
@@ -57,7 +57,7 @@ brexit-voting-analysis/
 - `age`: Respondent age
 - `Population`: District population
 
-## 📈 Key Findings
+## Key Findings
 
 ### 1. Strong Education-Vote Relationship
 - **Chi-square statistic**: 2109 (df=12, p < 0.001)
@@ -82,7 +82,7 @@ brexit-voting-analysis/
 - **Actual England result**: 53.4% leave
 - Poll underestimated leave support by ~6 percentage points
 
-## 🛠️ Technical Implementation
+##️ Technical Implementation
 
 ### R Packages Used
 ```r
@@ -114,7 +114,7 @@ brexit_data_district <- brexit_data_district %>%
   mutate(prop_pop = Population / sum(Population))
 ```
 
-## 📊 Visualizations
+## Visualizations
 
 ### Education Distribution Across Districts
 ![Education Distribution](visualizations/education_distribution.png)
@@ -128,7 +128,7 @@ brexit_data_district <- brexit_data_district %>%
 ![Correlation Matrix](visualizations/correlation_matrix.png)
 *Heatmap of correlations between leave percentage, education, and population*
 
-## 💡 Interpretation & Implications
+## Interpretation & Implications
 
 ### Political Economy Insights
 The strong negative correlation between education and Brexit support reveals important patterns about how educational attainment relates to attitudes toward European integration. Several factors may explain this:
@@ -145,7 +145,7 @@ The weak negative correlation between population size and leave voting suggests 
 - District-level analysis limited to England to ensure data consistency
 - Correlational analysis cannot establish causation—education may proxy for other socioeconomic factors
 
-## 🔄 Reproducibility
+## Reproducibility
 
 ### Requirements
 - R version 4.0+
@@ -167,13 +167,13 @@ source("analysis.R")
 - Survey data: Available from [Elena Llaudet's DSS GitHub repo](https://github.com/ellaudet/DSS)
 - District data: Included in repository
 
-## 📚 References
+## References
 
 This analysis is based on research from:
 - Hobolt, S. B. (2016). "The Brexit Vote: A Divided Nation, a Divided Continent"
 - Becker, S. O., et al. (2017). "Who Voted for Brexit? A Comprehensive District-Level Analysis"
 
-## 👨‍💻 About
+## About
 
 **Author**: Tommaso Accornero  
 **Program**: MSc Computational Social Science, Universidad Carlos III de Madrid  
@@ -184,7 +184,7 @@ This analysis is based on research from:
 - LinkedIn: [linkedin.com/in/tommasoaccornero](https://linkedin.com/in/https://www.linkedin.com/in/tommaso-accornero-4084931a9/)
 - Email: tommaso.accornero@outlook.com
 
-## 📝 License
+## License
 
 This project is available for educational and research purposes. Please cite appropriately if you use this analysis in your work.
 
